updated css comments, removed empty html classes

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
     <header>
         <nav class="navbar">
-            <ul class="nav-items">
-                <li><a class="nav-link" href="#home">HOME</a></li>
-                <li><a class="nav-link" href="#experience">EXPERIENCE</a></li>
-                <li><a class="nav-link" href="#education">EDUCATION</a></li>
-                <li><a class="nav-link" href="#links">LINKS</a></li>
+            <ul>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#experience">EXPERIENCE</a></li>
+                <li><a href="#education">EDUCATION</a></li>
+                <li><a href="#links">LINKS</a></li>
 
             </ul>
         </nav>
